force-app/main/default/objects/Event__c/fields/Attendee_Count__c.field-meta.xml
<CustomField>
  <fullName>Attendee_Count__c</fullName>
  <label>Attendee Count</label>
  <precision>8</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>