force-app/main/default/objects/Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
  <fullName>Event_Type__c</fullName>
  <label>Event Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Conference</fullName>
      </value>
      <value>
        <fullName>Workshop</fullName>
      </value>
      <value>
        <fullName>Seminar</fullName>
      </value>
      <value>
        <fullName>Training</fullName>
      </value>
      <value>
        <fullName>Webinar</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>