force-app/main/default/objects/Event__c/fields/External_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Sync_Status__c</fullName>
    <label>External Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <label>Error</label>
            </value>
            <value>
                <fullName>IN_PROGRESS</fullName>
                <label>In Progress</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>