force-app/main/default/objects/Event__c/fields/Meeting_Link__c.field-meta.xml
<CustomField>
  <fullName>Meeting_Link__c</fullName>
  <label>Meeting Link</label>
  <type>Url</type>
</CustomField>