force-app/main/default/objects/Event__c/fields/Mode__c.field-meta.xml
<CustomField>
  <fullName>Mode__c</fullName>
  <label>Mode</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Virtual</fullName>
      </value>
      <value>
        <fullName>In-Person</fullName>
      </value>
    </valueSetDefinition>
    <restricted>true</restricted>
  </valueSet>
</CustomField>