force-app/main/default/objects/Event__c/fields/Organizer__c.field-meta.xml
<CustomField>
  <fullName>Organizer__c</fullName>
  <label>Organizer</label>
  <type>Lookup</type>
  <referenceTo>User</referenceTo>
  <relationshipName>Organized_Events</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>