force-app/main/default/objects/Event__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Event Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value>
        <fullName>Draft</fullName>
        <default>true</default>
      </value>
      <value>
        <fullName>Published</fullName>
      </value>
      <value>
        <fullName>Registration Open</fullName>
      </value>
      <value>
        <fullName>Registration Closed</fullName>
      </value>
      <value>
        <fullName>Active</fullName>
      </value>
      <value>
        <fullName>Completed</fullName>
      </value>
      <value>
        <fullName>Cancelled</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>