force-app/main/default/objects/Event__c/fields/Venue__c.field-meta.xml
<CustomField>
  <fullName>Venue__c</fullName>
  <label>Venue</label>
  <length>255</length>
  <type>Text</type>
</CustomField>