force-app/main/default/objects/Event__c/recordTypes/In_Person.recordType-meta.xml
<RecordType>
  <fullName>In_Person</fullName>
  <active>true</active>
  <label>In-Person</label>
</RecordType>