force-app/main/default/objects/Event__c/recordTypes/Virtual.recordType-meta.xml
<RecordType>
  <fullName>Virtual</fullName>
  <active>true</active>
  <label>Virtual</label>
</RecordType>