force-app/main/default/objects/Event__c/validationRules/Overbooking.validationRule-meta.xml
<ValidationRule>
  <fullName>Overbooking</fullName>
  <active>true</active>
  <errorConditionFormula>Attendee_Count__c &gt; Capacity__c</errorConditionFormula>
  <errorMessage>Event capacity exceeded. No more registrations allowed.</errorMessage>
  <errorDisplayField>Capacity__c</errorDisplayField>
</ValidationRule>